  \renewcommand{\isakeywordONE}[1]{\isakeyword{\color[RGB]{0,102,153}#1}}
  \renewcommand{\isakeywordTWO}[1]{\isakeyword{\color[RGB]{0,153,102}#1}}
  \renewcommand{\isakeywordTHREE}[1]{\isakeyword{\color[RGB]{0,153,255}#1}}



*** HOL ***

* Code generator: command 'code_reserved' now uses parentheses for
target languages, similar to 'code_printing'.

* Sledgehammer:
  - Added instantiations of facts using the "of" attribute
    (e.g. "assms(1)[of x]"), which can be activated using the
    Sledgehammer option "suggest_of" (default: smart, i.e. only if
    preplaying failed).  This uses Metis internally to infer the
    variable instantiations (see below).
  - Added extensionality (fact "ext") to some "metis (lifting)" calls.
  - Use pretty-printing to format suggested one-line proofs.

* Metis:
  - Added inference of variable instantiations, which can be activated
    using the configuration option "metis_suggest_of" (default: false).
    This outputs a suggestion with instantiations of the facts using the
    "of" attribute (e.g. "assms(1)[of x]").

* Theory HOL-Library.Discrete has been renamed
HOL-Library.Discrete_Functions

  Discrete.log -> floor_log
  Discrete.sqrt -> floor_sqrt
  Renamed lemmas accordingly (...log/sqrt... -> ...floor_log/sqrt...)

* Theory "HOL.Wellfounded":
  - Removed lemma wellorder.wfP_less. Use wellorder.wfp_on_less instead.
    Minor INCOMPATIBILITY.
  - Renamed lemmas. Minor INCOMPATIBILITY.
      accp_wfPD ~> accp_wfpD
      accp_wfPI ~> accp_wfpI
      wfPUNIVI ~> wfpUNIVI
      wfP_SUP ~> wfp_SUP
      wfP_accp_iff ~> wfp_iff_accp
      wfP_acyclicP ~> wfp_acyclicP
      wfP_def ~> wfp_def
      wfP_empty ~> wfp_empty
      wfP_eq_minimal ~> wfp_eq_minimal
      wfP_if_convertible_to_nat ~> wfp_if_convertible_to_nat
      wfP_if_convertible_to_wfP ~> wfp_if_convertible_to_wfp
      wfP_imp_asymp ~> wfp_imp_asymp
      wfP_imp_irreflp ~> wfp_imp_irreflp
      wfP_induct ~> wfp_induct
      wfP_induct_rule ~> wfp_induct_rule