@@ -4,7 +4,7 @@ bash_process-20240326
 bib2xhtml-20190409
 csdp-6.1.1
 cvc4-1.8
-e-3.1
+e-3.1-1
 easychair-3.5
 eptcs-1.7.0
 flatlaf-2.6
